--- a/child_image/spm/prj.conf
+++ b/child_image/spm/prj.conf
@@ -4,14 +4,19 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-# Copy of the SPM project configuration. */
-CONFIG_ASSERT=n
+# Configuration copied from the nRF Secure Partition Manager (SPM) sample:
+CONFIG_ASSERT=n     # NCSDK-7354: CONFIG_ASSERT overflows SPM flash when enabled
+
 CONFIG_IS_SPM=y
 CONFIG_FW_INFO=y
 CONFIG_GPIO=n
 CONFIG_MAIN_STACK_SIZE=4096
+
+# Images that set CONFIG_BOOTLOADER_MCUBOOT get this value set by default.
+# The SPM image will not have CONFIG_BOOTLOADER_MCUBOOT set by default when
+# being built by a parent image. Hence we set it here to ensure that SPM
+# cleans up the core during boot.
 CONFIG_INIT_ARCH_HW_AT_BOOT=y
 
-## Disable serial and UART interface.
-CONFIG_SERIAL=n
-CONFIG_UART_CONSOLE=n
+# Make watchdog timers non-secure (so they can be used in the non-secure image).
+CONFIG_SPM_NRF_WDT_NS=y
