--- a/prj.conf
+++ b/prj.conf
@@ -3,80 +3,76 @@
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
-
 # General config
 CONFIG_NEWLIB_LIBC=y
-CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_ASSERT=y
 CONFIG_REBOOT=y
-CONFIG_RESET_ON_FATAL_ERROR=n
-
-# Heap and stacks
-CONFIG_HEAP_MEM_POOL_SIZE=32768
-CONFIG_MAIN_STACK_SIZE=1024
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
-CONFIG_HW_STACK_PROTECTION=y
-
-# Logging
-CONFIG_LOG=y
-CONFIG_LOG_IMMEDIATE=y
-
-# DK - Used for buttons and LEDs in UI module.
-CONFIG_DK_LIBRARY_INVERT_LEDS=n
-
-# nRF modem library
-CONFIG_NRF_MODEM_LIB=y
 
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=n
+CONFIG_NET_IPV6=n
+CONFIG_NET_IPV4=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 
-# LTE link control
-CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
-CONFIG_LTE_NETWORK_MODE_LTE_M_GPS=y
-## Power saving timers.
-CONFIG_LTE_PSM_REQ_RPTAU="01000011"
-CONFIG_LTE_PSM_REQ_RAT="00000000"
+# LwM2M
+CONFIG_LWM2M=y
+CONFIG_LWM2M_DNS_SUPPORT=y
+CONFIG_LWM2M_RW_JSON_SUPPORT=n
+CONFIG_LWM2M_SERVER_DEFAULT_PMIN=1
+CONFIG_LWM2M_SERVER_DEFAULT_PMAX=300
+CONFIG_LWM2M_CONN_MON_OBJ_SUPPORT=y
+CONFIG_LWM2M_CONN_MON_BEARER_MAX=2
+CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
+CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=y
+CONFIG_LWM2M_IPSO_SUPPORT=y
+CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
+CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
+CONFIG_LWM2M_IPSO_BUZZER=y
+CONFIG_LWM2M_IPSO_ONOFF_SWITCH=y
+CONFIG_LWM2M_IPSO_ONOFF_SWITCH_INSTANCE_COUNT=2
+CONFIG_LWM2M_IPSO_PUSH_BUTTON=y
+CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
+CONFIG_LWM2M_IPSO_ACCELEROMETER=y
+CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
+CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=y
 
-# AWS IoT
-## Mandatory application specific configurations for AWS_IOT.
-CONFIG_AWS_IOT=y
-CONFIG_AWS_IOT_TOPIC_UPDATE_DELTA_SUBSCRIBE=y
-CONFIG_AWS_IOT_TOPIC_GET_REJECTED_SUBSCRIBE=y
-CONFIG_AWS_IOT_AUTO_DEVICE_SHADOW_REQUEST=y
-CONFIG_AWS_IOT_MQTT_RX_TX_BUFFER_LEN=2048
-CONFIG_AWS_IOT_MQTT_PAYLOAD_BUFFER_LEN=2048
-CONFIG_AWS_IOT_APP_SUBSCRIPTION_LIST_COUNT=1
-CONFIG_AWS_IOT_CLIENT_ID_APP=y
-CONFIG_AWS_FOTA=y
+# DTLS settings
+# if n 5683
+CONFIG_LWM2M_DTLS_SUPPORT=y
+CONFIG_LWM2M_PEER_PORT=5684
 
-## AWS IoT options that must be configured.
-CONFIG_AWS_IOT_SEC_TAG=42
-CONFIG_AWS_IOT_BROKER_HOST_NAME=""
+# nRF9160 helper libraries
+CONFIG_MODEM_KEY_MGMT=y
 
-# MQTT
-# Keepalive should be set to the maximum specified MQTT keepalive timeout of the
-#        selected cloud library.
-#        1200 seconds for AWS IoT.
-CONFIG_MQTT_KEEPALIVE=1200
+# Default app to debug logging
+CONFIG_LOG=y
+CONFIG_APP_LOG_LEVEL_DBG=y
 
-# Settings - Used to store real-time device configuration to flash.
-CONFIG_SETTINGS=y
-CONFIG_SETTINGS_FCB=y
-CONFIG_FCB=y
+# Expand logging memory to avoid log_strdup() errors
+CONFIG_LOG_STRDUP_MAX_STRING=64
+CONFIG_LOG_STRDUP_BUF_COUNT=32
 
-# FOTA - Needed by AWS IoT.
-CONFIG_FOTA_DOWNLOAD=y
+# Support HEX style PSK values (double the size + NULL char)
+CONFIG_LWM2M_SECURITY_KEY_SIZE=33
+
+# extend CoAP retry timing to 10 seconds for LTE/LTE-M
+CONFIG_COAP_INIT_ACK_TIMEOUT_MS=10000
+
+# Enable CoAP extended option length
+CONFIG_COAP_EXTENDED_OPTIONS_LEN=y
+CONFIG_COAP_EXTENDED_OPTIONS_LEN_VALUE=40
+
+# UI settings
+CONFIG_UI_BUTTON=y
+CONFIG_UI_BUZZER=y
+
+# FOTA
 CONFIG_DFU_TARGET=y
-CONFIG_DOWNLOAD_CLIENT=y
-CONFIG_DOWNLOAD_CLIENT_HTTP_FRAG_SIZE_1024=y
-CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096
-CONFIG_DOWNLOAD_CLIENT_BUF_SIZE=2300
-CONFIG_DOWNLOAD_CLIENT_MAX_HOSTNAME_SIZE=128
 
-# Flash - Used in FOTA and Settings.
+# Flash
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
@@ -88,21 +84,46 @@ CONFIG_IMG_MANAGER=y
 CONFIG_MCUBOOT_IMG_MANAGER=y
 CONFIG_IMG_ERASE_PROGRESSIVELY=y
 
-# Watchdog
-CONFIG_WATCHDOG_APPLICATION=y
+# Enable temp sensor
+CONFIG_SENSOR=y
+# TODO: No DIE temp sensor on nRF9150, select a temp sensor?
+# CONFIG_TEMP_NRF5=y
 
-# AGPS
-# To use AGPS, a source of assistance data must be selected. By default, SUPL
-# is selected. However, due to licensing, the SUPL library must be manually
-# downloaded and configured according to the instructions found in the SUPL
-# client library documentation in NCS.
-# CONFIG_AGPS=y
-# CONFIG_AGPS_SRC_SUPL=y
+# Enable settings storage
+CONFIG_SETTINGS=y
+CONFIG_FCB=y
+CONFIG_SETTINGS_FCB=y
 
-# Event Manager
-CONFIG_EVENT_MANAGER=y
-CONFIG_LINKER_ORPHAN_SECTION_PLACE=y
-CONFIG_DESKTOP_EVENT_MANAGER_LOG_EVENT_TYPE=n
+# LTE link control
+CONFIG_LTE_LINK_CONTROL=y
+CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 
-# cJSON - Used in AWS FOTA and cloud data traffic encoding.
-CONFIG_CJSON_LIB=y
+# Modem library
+CONFIG_NRF_MODEM_LIB=y
+
+# Modem info
+CONFIG_MODEM_INFO=y
+CONFIG_MODEM_INFO_ADD_DATE_TIME=n
+
+# Library for buttons and LEDs
+CONFIG_DK_LIBRARY=y
+CONFIG_DK_LIBRARY_INVERT_LEDS=n
+
+# Enable shell
+CONFIG_NET_SHELL=y
+
+# Heap and stacks
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+# Temporarily disable CC310 entropy driver
+CONFIG_ENTROPY_CC3XX=n
+CONFIG_TEST_RANDOM_GENERATOR=y
+
+# Set LwM2M Server IP address here
+# CONFIG_APP_LWM2M_SERVER="leshan.eclipseprojects.io"
+CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
+
+# Set LwM2M Client Endpoint name  here
+CONFIG_APP_LWM2M_CLIENT="nrf-9160dk-e"
