--- a/src/lwm2m/CMakeLists.txt
+++ b/src/lwm2m/CMakeLists.txt
@@ -32,3 +32,6 @@ target_sources_ifdef(CONFIG_UI_BUTTON
 target_sources_ifdef(CONFIG_LWM2M_IPSO_ACCELEROMETER
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_accelerometer.c
 	)
+target_sources_ifdef(CONFIG_LWM2M_IPSO_CONCENTRATION
+	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_concentration.c
+	)
