Particulate sensor draft

--- a/prj.conf
+++ b/prj.conf
@@ -32,6 +32,7 @@ CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
 CONFIG_LWM2M_IPSO_ACCELEROMETER=y
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
 CONFIG_LWM2M_IPSO_CONCENTRATION=y
+CONFIG_LWM2M_OPENLX_SP_PARTICULATE=y
 
 # DTLS settings
 CONFIG_LWM2M_DTLS_SUPPORT=y
