--- a/prj.conf
+++ b/prj.conf
@@ -31,10 +31,11 @@ CONFIG_LWM2M_IPSO_PUSH_BUTTON=y
 CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
 CONFIG_LWM2M_IPSO_ACCELEROMETER=y
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
-CONFIG_LWM2M_IPSO_CONCENTRATION=y
-CONFIG_LWM2M_OPENLX_SP_PARTICULATE=y
+CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=y
 
 # DTLS settings
+# if n 5683
 CONFIG_LWM2M_DTLS_SUPPORT=y
 CONFIG_LWM2M_PEER_PORT=5684
 
@@ -118,4 +119,6 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 # Set LwM2M Server IP address here
 # CONFIG_APP_LWM2M_SERVER="leshan.eclipseprojects.io"
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
->>>>>>> feature/lwm2msensors
+
+# Set LwM2M Client Endpoint name  here
+CONFIG_APP_LWM2M_CLIENT="nrf-9160dk-e"
