* Added I2C configuration - prj.conf

--- a/src/lwm2m/CMakeLists.txt
+++ b/src/lwm2m/CMakeLists.txt
@@ -38,3 +38,6 @@ target_sources_ifdef(CONFIG_LWM2M_IPSO_CONC_SENSOR
 target_sources_ifdef(CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_particulate.c
 	)
+target_sources_ifdef(CONFIG_LWM2M_IPSO_COLOUR_SENSOR
+	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_colour.c
+	)
