--- a/boards/thingy91_nrf9160ns.conf
+++ b/boards/thingy91_nrf9160ns.conf
@@ -11,6 +11,7 @@
 # Configuration related to external sensors.
 CONFIG_SENSOR=y
 CONFIG_SPI=y
+CONFIG_I2C=y
 
 # ADXL362 - Accelerometer
 CONFIG_ADXL362=y
