--- a/prj.conf
+++ b/prj.conf
@@ -1,8 +1,3 @@
-#
-# Copyright (c) 2021 Nordic Semiconductor ASA
-#
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
-#
 # General config
 CONFIG_NEWLIB_LIBC=y
 CONFIG_ASSERT=y
@@ -36,8 +31,9 @@ CONFIG_LWM2M_IPSO_PUSH_BUTTON=y
 CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
 CONFIG_LWM2M_IPSO_ACCELEROMETER=y
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
-CONFIG_LWM2M_IPSO_CONC_SENSOR=y
-CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=y
+CONFIG_LWM2M_IPSO_CONC_SENSOR=n
+CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 
 # DTLS settings
 # if n 5683
@@ -125,5 +121,6 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 # CONFIG_APP_LWM2M_SERVER="leshan.eclipseprojects.io"
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
-# Set LwM2M Client Endpoint name  here
-CONFIG_APP_LWM2M_CLIENT="nrf-9160dk-e"
+# Set LwM2M Client Endpoint name here
+CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
+   
