colour sensor draft

--- a/prj.conf
+++ b/prj.conf
@@ -32,6 +32,7 @@ CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
 CONFIG_LWM2M_IPSO_ACCELEROMETER=y
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
+CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 
 # DTLS settings
