--- a/Kconfig
+++ b/Kconfig
@@ -30,6 +30,12 @@ config LWM2M_OPENLX_SP_PRTCL_SENSOR
 	help
 	  Use particle sensor
 
+config LWM2M_IPSO_COLOUR_SENSOR
+	bool "Use Colour/light sensor"
+	default n
+	help
+	  Use colour/light sensor
+
 config APP_HOLD_TIME_RSRP
 	int "Minimum time [s] between RSRP notification messages"
 	default 60
