LwM2M sensor objects updated resources

--- a/Kconfig
+++ b/Kconfig
@@ -6,6 +6,7 @@
 menu "Application sample"
 
 rsource "src/ui/Kconfig"
+rsource "src/lwm2m/Kconfig.ipso"
 
 config APP_LWM2M_SERVER
 	string "LwM2M server name or IP address"
