--- a/prj.conf
+++ b/prj.conf
@@ -34,7 +34,9 @@ CONFIG_LWM2M_IPSO_ACCELEROMETER=n
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
+CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 
 # DTLS settings
 # if n 5683
@@ -124,4 +126,3 @@ CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
 CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
-   
