Hotfix: LWM2M Particle instance count

--- a/prj.conf
+++ b/prj.conf
@@ -35,7 +35,7 @@ CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
-CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
+#CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 
 # DTLS settings
 # if n 5683
