* Modified cmake for updated directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,14 +24,14 @@ zephyr_include_directories(src)
 zephyr_library_include_directories(
   src/lwm2m
   src/ui
-  sensor/bh1749
-  sensor/bme680
-  sensor/dgso3
-  sensor/sensor_sim
-  sensor/sps30
-  lib
+  src/sensor/bh1749
+  src/sensor/dgso3
+  src/sensor/sensor_sim
+  src/sensor/sps30
   )
 
 # Application sources
 add_subdirectory(src/lwm2m)
 add_subdirectory(src/ui)
+add_subdirectory(src/lib)
+  
