* Hotfix: Build for Thingy91

--- a/prj.conf
+++ b/prj.conf
@@ -21,14 +21,14 @@ CONFIG_LWM2M_SERVER_DEFAULT_PMAX=300
 CONFIG_LWM2M_CONN_MON_OBJ_SUPPORT=y
 CONFIG_LWM2M_CONN_MON_BEARER_MAX=2
 CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
-CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=y
+CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=n
 CONFIG_LWM2M_IPSO_SUPPORT=y
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_LWM2M_IPSO_BUZZER=n
-CONFIG_LWM2M_IPSO_ONOFF_SWITCH=y
+CONFIG_LWM2M_IPSO_ONOFF_SWITCH=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH_INSTANCE_COUNT=2
-CONFIG_LWM2M_IPSO_PUSH_BUTTON=y
+CONFIG_LWM2M_IPSO_PUSH_BUTTON=n
 CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
 CONFIG_LWM2M_IPSO_ACCELEROMETER=n
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
@@ -36,6 +36,7 @@ CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 #CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
+CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
 # DTLS settings
 # if n 5683
@@ -64,8 +65,9 @@ CONFIG_COAP_EXTENDED_OPTIONS_LEN=y
 CONFIG_COAP_EXTENDED_OPTIONS_LEN_VALUE=40
 
 # UI settings
-CONFIG_UI_BUTTON=y
-CONFIG_UI_BUZZER=y
+CONFIG_UI_BUTTON=n
+CONFIG_UI_BUZZER=n
+CONFIG_UI_LED_USE_PWM=n
 
 # FOTA
 CONFIG_DFU_TARGET=y
