--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,5 @@ zephyr_library_include_directories(
 # Application sources
 add_subdirectory(src/lwm2m)
 add_subdirectory(src/ui)
-add_subdirectory(src/lib)
+#add_subdirectory(src/lib)
   
