--- a/prj.conf
+++ b/prj.conf
@@ -127,4 +127,4 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
+CONFIG_APP_LWM2M_CLIENT="t91-pab"
