--- a/prj.conf
+++ b/prj.conf
@@ -24,6 +24,7 @@ CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
 CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=n
 CONFIG_LWM2M_IPSO_SUPPORT=y
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_LWM2M_IPSO_BUZZER=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH=n
@@ -38,6 +39,7 @@ CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
 
 # DTLS settings
 # if n 5683
