--- a/src/lwm2m/CMakeLists.txt
+++ b/src/lwm2m/CMakeLists.txt
@@ -23,6 +23,10 @@ target_sources_ifdef(CONFIG_LWM2M_CONN_MON_OBJ_SUPPORT
 target_sources_ifdef(CONFIG_LWM2M_IPSO_TEMP_SENSOR
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_temp.c
 	)
+target_sources_ifdef(CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR
+	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_humidity.c
+	)
+target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas_res.c)
 #target_sources_ifdef(CONFIG_UI_BUZZER
 #	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_buzzer.c
 #	)
