--- a/prj.conf
+++ b/prj.conf
@@ -126,4 +126,4 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="t91-pab"
+CONFIG_APP_LWM2M_CLIENT=""
