--- a/prj.conf
+++ b/prj.conf
@@ -24,6 +24,7 @@ CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
 CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=n
 CONFIG_LWM2M_IPSO_SUPPORT=y
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_LWM2M_IPSO_BUZZER=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH=n
@@ -38,6 +39,7 @@ CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
 
 # DTLS settings
 # if n 5683
@@ -87,8 +89,6 @@ CONFIG_IMG_ERASE_PROGRESSIVELY=y
 
 # Enable temp sensor
 CONFIG_SENSOR=y
-# TODO: No DIE temp sensor on nRF9150, select a temp sensor?
-# CONFIG_TEMP_NRF5=y
 
 # Enable settings storage
 CONFIG_SETTINGS=y
@@ -123,8 +123,7 @@ CONFIG_ENTROPY_CC3XX=n
 CONFIG_TEST_RANDOM_GENERATOR=y
 
 # Set LwM2M Server IP address here
-# CONFIG_APP_LWM2M_SERVER="leshan.eclipseprojects.io"
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="t91-pab"
+CONFIG_APP_LWM2M_CLIENT=""
