* Removed personal LWM2M endpoint name

--- a/prj.conf
+++ b/prj.conf
@@ -89,8 +89,6 @@ CONFIG_IMG_ERASE_PROGRESSIVELY=y
 
 # Enable temp sensor
 CONFIG_SENSOR=y
-# TODO: No DIE temp sensor on nRF9150, select a temp sensor?
-# CONFIG_TEMP_NRF5=y
 
 # Enable settings storage
 CONFIG_SETTINGS=y
@@ -125,8 +123,7 @@ CONFIG_ENTROPY_CC3XX=n
 CONFIG_TEST_RANDOM_GENERATOR=y
 
 # Set LwM2M Server IP address here
-# CONFIG_APP_LWM2M_SERVER="leshan.eclipseprojects.io"
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="t91-pab"
+CONFIG_APP_LWM2M_CLIENT=""
