* Working compile of dgso3 sensor driver * Added LWM2M driver for sensor * Added UART config in thingy91 overlay

--- a/prj.conf
+++ b/prj.conf
@@ -127,3 +127,10 @@ CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
 CONFIG_APP_LWM2M_CLIENT=""
+
+# UART settings
+CONFIG_SERIAL=y
+CONFIG_PRINTK=y
+CONFIG_TRUSTED_EXECUTION_NONSECURE=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+# CONFIG_MAIN_STACK_SIZE=4096
