add set pointer

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -6,4 +6,4 @@ project(lib)
 #target_sources(app PRIVATE dgso3.c)
 target_sources(app PRIVATE sps30_I2C.c)
 
-zephyr_include directories(.)
+zephyr_include_directories(.)
