--- a/prj.conf
+++ b/prj.conf
@@ -23,8 +23,6 @@ CONFIG_LWM2M_CONN_MON_BEARER_MAX=2
 CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
 CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=n
 CONFIG_LWM2M_IPSO_SUPPORT=y
-CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
-CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_LWM2M_IPSO_BUZZER=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH=n
@@ -33,13 +31,16 @@ CONFIG_LWM2M_IPSO_PUSH_BUTTON=n
 CONFIG_LWM2M_IPSO_PUSH_BUTTON_INSTANCE_COUNT=2
 CONFIG_LWM2M_IPSO_ACCELEROMETER=n
 CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
-CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
-CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
+
+CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_LWM2M_GAS_RES=n
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
+CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
 
 # DTLS settings
 # if n 5683
