--- a/bench/dk/prj.conf
+++ b/bench/dk/prj.conf
@@ -3,12 +3,16 @@ CONFIG_NEWLIB_LIBC=y
 
 # UART settings
 CONFIG_SERIAL=y
-CONFIG_PRINTK=y
+CONFIG_PRINTK=n
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # DK settings
 CONFIG_DK_LIBRARY=y
+CONFIG_UI_BUTTON=y
+CONFIG_UI_BUZZER=n
+CONFIG_UI_LED_USE_PWM=n
+CONFIG_DK_LIBRARY_INVERT_LEDS=n
 
 # Log settings
 CONFIG_LOG=y
