* Working test bench for dgso3 library

--- a/bench/dk/prj.conf
+++ b/bench/dk/prj.conf
@@ -3,9 +3,10 @@ CONFIG_NEWLIB_LIBC=y
 
 # UART settings
 CONFIG_SERIAL=y
-CONFIG_PRINTK=n
+CONFIG_PRINTK=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_BOOT_BANNER=n
 
 # DK settings
 CONFIG_DK_LIBRARY=y
@@ -15,7 +16,7 @@ CONFIG_UI_LED_USE_PWM=n
 CONFIG_DK_LIBRARY_INVERT_LEDS=n
 
 # Log settings
-CONFIG_LOG=y
-CONFIG_APP_LOG_LEVEL_DBG=y
+CONFIG_LOG=n
+CONFIG_APP_LOG_LEVEL_DBG=n
 CONFIG_LOG_STRDUP_MAX_STRING=64
 CONFIG_LOG_STRDUP_BUF_COUNT=32
