--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.13.1)
+# cmake_minimum_required(VERSION 3.13.1)
 
-find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(lib)
-zephyr_compile_definitions(PROJECT_NAME=${PROJECT_NAME})
+# find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
+# project(lib)
+# zephyr_compile_definitions(PROJECT_NAME=${PROJECT_NAME})
 
 #target_sources(app PRIVATE dgso3.c)
 target_sources(app PRIVATE sps30_I2C.c)
