Hotfix: Broken test bench

--- a/test/prj.conf
+++ b/test/prj.conf
@@ -1,6 +1,9 @@
+CONFIG_NEWLIB_LIBC=n
+
 # Serial
 CONFIG_SERIAL=y
 CONFIG_PRINTK=y
+# CONFIG_BOOT_BANNER=n
 
 # I2C
 CONFIG_I2C=y
@@ -9,6 +12,9 @@ CONFIG_I2C=y
 CONFIG_LOG=y
 CONFIG_APP_LOG_LEVEL_DBG=y
 
-# DK
+# DK settings
 CONFIG_DK_LIBRARY=y
+CONFIG_UI_BUTTON=y
+CONFIG_UI_BUZZER=n
+CONFIG_UI_LED_USE_PWM=n
 CONFIG_DK_LIBRARY_INVERT_LEDS=n
