--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,11 @@ zephyr_compile_definitions(PROJECT_NAME=${PROJECT_NAME})
 
 #target_sources(app PRIVATE dgso3.c)
 target_sources(app PRIVATE dk.c)
-zephyr_include_directories(.)
+
+zephyr_library_include_directories(
+	lib
+	ui
+)
 
 add_subdirectory(lib)
-zephyr_library_include_directories(lib)
+add_subdirectory(ui)
