web server & read on awake (no observe)

--- a/leshan/aqi-server/pom.xml
+++ b/leshan/aqi-server/pom.xml
@@ -90,8 +90,8 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>aqi.AQIServer</mainClass>
-							<!--<mainClass>aqi.AirQualityServer</mainClass>-->
+							<!--<mainClass>aqi.AQIServer</mainClass>-->
+							<mainClass>aqi.AirQualityServer</mainClass>
 						</manifest>
 					</archive>
 					<descriptors>
