--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,14 +24,11 @@ zephyr_include_directories(src)
 zephyr_library_include_directories(
   src/lwm2m
   src/ui
-  src/sensor/bh1749
-  src/sensor/dgso3
-  src/sensor/sensor_sim
-  src/sensor/sps30
-  )
+  src/lib
+ )
 
 # Application sources
 add_subdirectory(src/lwm2m)
 add_subdirectory(src/ui)
-#add_subdirectory(src/lib)
+add_subdirectory(src/lib)
   
