--- a/prj.conf
+++ b/prj.conf
@@ -127,7 +127,7 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT=""
+CONFIG_APP_LWM2M_CLIENT="gas-test"
 
 # UART settings
 CONFIG_SERIAL=y
