fixed concentration lwm2m init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ zephyr_library_include_directories(
   src/ui
   src/sensor/bh1749
   src/sensor/dgso3
+  src/sensor/ipso
   src/sensor/sensor_sim
   src/sensor/sps30
   src/lib
@@ -35,3 +36,4 @@ zephyr_library_include_directories(
 add_subdirectory(src/lwm2m)
 add_subdirectory(src/ui)
 add_subdirectory(src/lib)
+add_subdirectory(src/sensor/ipso)
