--- a/prj.conf
+++ b/prj.conf
@@ -51,8 +51,8 @@ CONFIG_LWM2M_PEER_PORT=5684
 CONFIG_MODEM_KEY_MGMT=y
 
 # Default app to debug logging
-CONFIG_LOG=n
-CONFIG_APP_LOG_LEVEL_DBG=n
+CONFIG_LOG=y
+CONFIG_APP_LOG_LEVEL_DBG=y
 
 # Expand logging memory to avoid log_strdup() errors
 CONFIG_LOG_STRDUP_MAX_STRING=64
@@ -133,5 +133,5 @@ CONFIG_APP_LWM2M_CLIENT="gas-test"
 CONFIG_SERIAL=y
 CONFIG_PRINTK=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_INTERRUPT_DRIVEN=n
 CONFIG_BOOT_BANNER=n
