--- a/src/lwm2m/CMakeLists.txt
+++ b/src/lwm2m/CMakeLists.txt
@@ -24,13 +24,13 @@ target_sources_ifdef(CONFIG_LWM2M_IPSO_TEMP_SENSOR
 target_sources_ifdef(CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_humidity.c
 	)
-target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas.c)
-# target_sources_ifdef(CONFIG_LWM2M_IPSO_CONC_SENSOR
-# 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas.c
-# 	)
-target_sources_ifdef(CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_particulate.c
+# target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas.c)
+target_sources_ifdef(CONFIG_LWM2M_IPSO_GENERIC_SENSOR
+	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas.c
 	)
+# target_sources_ifdef(CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR
+	# app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_particulate.c
+	# )
 target_sources_ifdef(CONFIG_LWM2M_IPSO_COLOUR_SENSOR
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_colour.c
 	)
