--- a/prj.conf
+++ b/prj.conf
@@ -1,7 +1,7 @@
 # General config
 CONFIG_NEWLIB_LIBC=y
 CONFIG_ASSERT=y
-CONFIG_REBOOT=y
+CONFIG_REBOOT=n
 
 # Network
 CONFIG_NETWORKING=y
@@ -37,7 +37,8 @@ CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
-CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
+CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_GAS_RES=n
 CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
@@ -127,11 +128,11 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="gas-test"
+CONFIG_APP_LWM2M_CLIENT="gas-pab"
 
 # UART settings
 CONFIG_SERIAL=y
 CONFIG_PRINTK=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_INTERRUPT_DRIVEN=n
 CONFIG_BOOT_BANNER=n
