overlay and driver fix

--- a/prj.conf
+++ b/prj.conf
@@ -37,9 +37,9 @@ CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=y
-CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
+#CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
-CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR=n
 
 # DTLS settings
 # if n 5683
@@ -50,8 +50,8 @@ CONFIG_LWM2M_PEER_PORT=5684
 CONFIG_MODEM_KEY_MGMT=y
 
 # Default app to debug logging
-CONFIG_LOG=y
-CONFIG_APP_LOG_LEVEL_DBG=y
+CONFIG_LOG=n
+CONFIG_APP_LOG_LEVEL_DBG=n
 
 # Expand logging memory to avoid log_strdup() errors
 CONFIG_LOG_STRDUP_MAX_STRING=64
@@ -126,4 +126,4 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT=""
+CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
