failed to build

--- a/prj.conf
+++ b/prj.conf
@@ -37,7 +37,7 @@ CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=y
-#CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR=n
 
@@ -50,8 +50,8 @@ CONFIG_LWM2M_PEER_PORT=5684
 CONFIG_MODEM_KEY_MGMT=y
 
 # Default app to debug logging
-CONFIG_LOG=n
-CONFIG_APP_LOG_LEVEL_DBG=n
+CONFIG_LOG=y
+CONFIG_APP_LOG_LEVEL_DBG=y
 
 # Expand logging memory to avoid log_strdup() errors
 CONFIG_LOG_STRDUP_MAX_STRING=64
