--- a/prj.conf
+++ b/prj.conf
@@ -36,10 +36,15 @@ CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
-CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=y
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
+CONFIG_LWM2M_OPENLX_SP_TIMESTAMP_EXTENSIONS=y
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_TIMESTAMP=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
-CONFIG_LWM2M_IPSO_GENERIC_SENSOR=n
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR_INSTANCE_COUNT=3
+
+CONFIG_I2C=y
 
 # DTLS settings
 # if n 5683
@@ -126,4 +131,4 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
+CONFIG_APP_LWM2M_CLIENT="nrf9160dk-e"
