--- a/bench/dk/prj.conf
+++ b/bench/dk/prj.conf
@@ -5,8 +5,8 @@ CONFIG_NEWLIB_LIBC=y
 CONFIG_SERIAL=y
 CONFIG_PRINTK=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
-CONFIG_NATIVE_UART_0_ON_STDINOUT=y
-CONFIG_UART_INTERRUPT_DRIVEN=n
+# CONFIG_NATIVE_UART_0_ON_STDINOUT=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_BOOT_BANNER=n
 
 # DK settings
