Print sps measurements

--- a/prj.conf
+++ b/prj.conf
@@ -131,4 +131,4 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="nrf9160dk-e"
+CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
