--- a/bench/dk/prj.conf
+++ b/bench/dk/prj.conf
@@ -3,21 +3,23 @@ CONFIG_NEWLIB_LIBC=y
 
 # UART settings
 CONFIG_SERIAL=y
-CONFIG_PRINTK=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
 # CONFIG_NATIVE_UART_0_ON_STDINOUT=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_BOOT_BANNER=n
+# CONFIG_BOOT_BANNER=n
 
 # DK settings
 CONFIG_DK_LIBRARY=y
-CONFIG_UI_BUTTON=y
-CONFIG_UI_BUZZER=n
-CONFIG_UI_LED_USE_PWM=n
+# CONFIG_UI_BUTTON=n
+# CONFIG_UI_BUZZER=n
+# CONFIG_UI_LED_USE_PWM=n
 CONFIG_DK_LIBRARY_INVERT_LEDS=n
 
 # Log settings
-CONFIG_LOG=n
-CONFIG_APP_LOG_LEVEL_DBG=n
-CONFIG_LOG_STRDUP_MAX_STRING=64
-CONFIG_LOG_STRDUP_BUF_COUNT=32
+CONFIG_LOG=y
+CONFIG_APP_LOG_LEVEL_DBG=y
+# Enable printk
+CONFIG_PRINTK=y
+CONFIG_UART_CONSOLE=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_UART_CONSOLE_ON_DEV_NAME="UART_0"
