Prep for merge with dev + integration test
* Added sensor driver files and settings from 'feature/pms' and
'feature/gas
* Modified lwm2m objects instance count
* Removed old files

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,14 +1,4 @@
-zephyr_include_directories(include)
+target_sources(app PRIVATE dgso3.c)
+target_sources(app PRIVATE sps30_I2C.c)
 
-target_sources_ifdef(CONFIG_LWM2M_IPSO_TEMP_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/ipso_temp_sensor.c
-	)
-target_sources_ifdef(CONFIG_LWM2M_IPSO_CONC_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/ipso_conc_sensor.c
-	)
-target_sources_ifdef(CONFIG_LWM2M_IPSO_COLOUR_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/ipso_colour_sensor.c
-	)
-target_sources_ifdef(CONFIG_LWM2M_OPENLX_SP_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/openlx_sp_prtcl_sensor.c
-	)
+zephyr_include_directories(.)
