--- a/src/lwm2m/CMakeLists.txt
+++ b/src/lwm2m/CMakeLists.txt
@@ -26,7 +26,13 @@ target_sources_ifdef(CONFIG_LWM2M_IPSO_TEMP_SENSOR
 target_sources_ifdef(CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_humidity.c
 	)
-target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas_res.c)
+
+target_sources_ifdef(CONFIG_LWM2M_IPSO_CONC_SENSOR
+	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas_res.c
+	)
+target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas.c)
+target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_pms.c)
+
 #target_sources_ifdef(CONFIG_UI_BUZZER
 #	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_buzzer.c
 #	)
@@ -36,12 +42,9 @@ target_sources(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_gas_res.c)
 #target_sources_ifdef(CONFIG_LWM2M_IPSO_ACCELEROMETER
 #	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_accelerometer.c
 #	)
-target_sources_ifdef(CONFIG_LWM2M_IPSO_CONC_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_concentration.c
-	)
-target_sources_ifdef(CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR
-	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_particulate.c
-	)
+# target_sources_ifdef(CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR
+# 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_particulate.c
+# 	)
 target_sources_ifdef(CONFIG_LWM2M_IPSO_COLOUR_SENSOR
 	app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lwm2m_colour.c
 	)
