* Added generic sensor instance count * Removed obj_inst logic from lwm2m_gas_res

--- a/prj.conf
+++ b/prj.conf
@@ -11,7 +11,6 @@ CONFIG_NET_IPV4=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 
-
 # LwM2M
 CONFIG_LWM2M=y
 CONFIG_LWM2M_DNS_SUPPORT=y
@@ -38,6 +37,7 @@ CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
+CONFIG_LWM2M_IPSO_GENERIC_SENSOR_INSTANCE_COUNT=5
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
 CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
