--- a/prj.conf
+++ b/prj.conf
@@ -33,7 +33,6 @@ CONFIG_LWM2M_IPSO_TIMESTAMP_EXTENSIONS=y
 CONFIG_LWM2M_IPSO_COLOUR_SENSOR=n
 CONFIG_LWM2M_OPENLX_SP_SUPPORT=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR=n
-CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=4
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
@@ -41,6 +40,9 @@ CONFIG_LWM2M_IPSO_GENERIC_SENSOR_INSTANCE_COUNT=5
 CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
 CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
+CONFIG_GAS=y
+CONFIG_PMS=n
+CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
 # DTLS settings
 # if n 5683
@@ -127,7 +129,7 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="nrf9160dk-"
+CONFIG_APP_LWM2M_CLIENT="nrf9160dk-p"
 
 # I2C
 CONFIG_I2C=y
