* Added kconfig options to sensor compile * Moved particle sensor from i2c2 to i2c3

--- a/prj.conf
+++ b/prj.conf
@@ -41,7 +41,7 @@ CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
 CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
 CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_GAS=y
-CONFIG_PMS=y
+CONFIG_PMS=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
 # DTLS settings
