--- a/boards/thingy91_nrf9160ns.conf
+++ b/boards/thingy91_nrf9160ns.conf
@@ -10,16 +10,16 @@
 
 # Configuration related to external sensors.
 CONFIG_SENSOR=y
-CONFIG_SPI=y
+CONFIG_SPI=n
 CONFIG_I2C=y
 
 # ADXL362 - Accelerometer
-CONFIG_ADXL362=y
-CONFIG_ADXL362_TRIGGER_GLOBAL_THREAD=y
+CONFIG_ADXL362=n
+CONFIG_ADXL362_TRIGGER_GLOBAL_THREAD=n
 CONFIG_ADXL362_INTERRUPT_MODE=1
 CONFIG_ADXL362_ABS_REF_MODE=1
-CONFIG_ADXL362_ACCEL_RANGE_2G=y
-CONFIG_ADXL362_ACCEL_ODR_12_5=y
+CONFIG_ADXL362_ACCEL_RANGE_2G=n
+CONFIG_ADXL362_ACCEL_ODR_12_5=n
 
 # BME680 - Temperature and humidity sensor.
 CONFIG_BME680=y
