--- a/prj.conf
+++ b/prj.conf
@@ -37,10 +37,10 @@ CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR_INSTANCE_COUNT=5
-CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
-CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
-CONFIG_LWM2M_IPSO_CONC_SENSOR=n
-CONFIG_GAS=y
+CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
+CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_GAS=n
 CONFIG_PMS=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
@@ -129,7 +129,7 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="nrf9160dk-p"
+CONFIG_APP_LWM2M_CLIENT="t91-jak"
 
 # I2C
 CONFIG_I2C=y
