--- a/overlay-queue.conf
+++ b/overlay-queue.conf
@@ -1,6 +1,6 @@
 # Disable DTLS. Public Eclipse Leshane drops DTLS session after ~half a minute.
-#CONFIG_LWM2M_DTLS_SUPPORT=n
-#CONFIG_LWM2M_PEER_PORT=5683
+# CONFIG_LWM2M_DTLS_SUPPORT=n
+# CONFIG_LWM2M_PEER_PORT=5683
 
 # Enable LwM2M Queue Mode
 CONFIG_LWM2M_QUEUE_MODE_ENABLED=y
@@ -11,3 +11,20 @@ CONFIG_LWM2M_ENGINE_DEFAULT_LIFETIME=300
 CONFIG_LTE_PSM_REQ_RPTAU="10100101"
 # RAT to 120 seconds - not possible to set any closer to default 93 seconds
 CONFIG_LTE_PSM_REQ_RAT="00100010"
+
+# Disable serial interface.
+CONFIG_SERIAL=n
+
+# Disable LEDs
+# CONFIG_LED_CONTROL=n
+CONFIG_LED=n
+
+# Disable UART console.
+CONFIG_UART_CONSOLE=n
+
+# Disable event logging.
+CONFIG_DESKTOP_EVENT_MANAGER_SHOW_EVENTS=n
+
+# Logging
+CONFIG_LOG=n
+CONFIG_APP_LOG_LEVEL_DBG=n
