--- a/prj.conf
+++ b/prj.conf
@@ -22,7 +22,7 @@ CONFIG_LWM2M_CONN_MON_BEARER_MAX=2
 CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
 CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=n
 CONFIG_LWM2M_IPSO_SUPPORT=y
-CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
+CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 CONFIG_LWM2M_IPSO_BUZZER=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH_INSTANCE_COUNT=2
@@ -37,10 +37,10 @@ CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR_INSTANCE_COUNT=5
-CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
-CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
-CONFIG_LWM2M_IPSO_CONC_SENSOR=n
-CONFIG_GAS=y
+CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
+CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_GAS=n
 CONFIG_PMS=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
@@ -53,8 +53,8 @@ CONFIG_LWM2M_PEER_PORT=5684
 CONFIG_MODEM_KEY_MGMT=y
 
 # Default app to debug logging
-CONFIG_LOG=y
-CONFIG_APP_LOG_LEVEL_DBG=y
+# CONFIG_LOG=y
+# CONFIG_APP_LOG_LEVEL_DBG=y
 
 # Expand logging memory to avoid log_strdup() errors
 CONFIG_LOG_STRDUP_MAX_STRING=64
@@ -129,14 +129,14 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="nrf9160dk-p"
+CONFIG_APP_LWM2M_CLIENT="t91-jak"
 
 # I2C
 CONFIG_I2C=y
 
 # UART settings
-CONFIG_SERIAL=y
-CONFIG_PRINTK=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_TRUSTED_EXECUTION_NONSECURE=y
-CONFIG_BOOT_BANNER=n
+# CONFIG_SERIAL=y
+# CONFIG_PRINTK=y
+# CONFIG_UART_INTERRUPT_DRIVEN=y
+# CONFIG_TRUSTED_EXECUTION_NONSECURE=y
+# CONFIG_BOOT_BANNER=n
