--- a/prj.conf
+++ b/prj.conf
@@ -41,7 +41,7 @@ CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
 CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
 CONFIG_LWM2M_IPSO_CONC_SENSOR=y
 CONFIG_GAS=n
-CONFIG_PMS=n
+CONFIG_PMS=y
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
 # DTLS settings
@@ -53,8 +53,8 @@ CONFIG_LWM2M_PEER_PORT=5684
 CONFIG_MODEM_KEY_MGMT=y
 
 # Default app to debug logging
-CONFIG_LOG=y
-CONFIG_APP_LOG_LEVEL_DBG=y
+# CONFIG_LOG=y
+# CONFIG_APP_LOG_LEVEL_DBG=y
 
 # Expand logging memory to avoid log_strdup() errors
 CONFIG_LOG_STRDUP_MAX_STRING=64
