Test, DK nRF9160

--- a/prj.conf
+++ b/prj.conf
@@ -37,11 +37,11 @@ CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR=y
 CONFIG_LWM2M_IPSO_GENERIC_SENSOR_INSTANCE_COUNT=5
-CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
-CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
-CONFIG_LWM2M_IPSO_CONC_SENSOR=y
+CONFIG_LWM2M_IPSO_TEMP_SENSOR=n
+CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=n
+CONFIG_LWM2M_IPSO_CONC_SENSOR=n
 CONFIG_GAS=n
-CONFIG_PMS=y
+CONFIG_PMS=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
 # DTLS settings
