Added comments around PSM/Active time

--- a/overlay-queue.conf
+++ b/overlay-queue.conf
@@ -8,9 +8,11 @@ CONFIG_LWM2M_ENGINE_DEFAULT_LIFETIME=300
 
 # Configure PSM mode
 # TAU to 300 seconds - LWM2M default lifetime
+# https://infocenter.nordicsemi.com/index.jsp?topic=%2Fref_at_commands%2FREF%2Fat_commands%2Fnw_service%2Fcpsms.html
 CONFIG_LTE_PSM_REQ_RPTAU="10100101"
 # RAT to 120 seconds - not possible to set any closer to default 93 seconds
 CONFIG_LTE_PSM_REQ_RAT="00100010"
+# Opt: 30s == 00001111
 
 # Disable serial interface.
 CONFIG_SERIAL=n
