Final commit until v1.0:
* Added Nordic License
* Added README
* Modified project yaml file
* Moved old README

--- a/prj.conf
+++ b/prj.conf
@@ -129,7 +129,7 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_APP_LWM2M_SERVER="airq.freedombox.rocks"
 
 # Set LwM2M Client Endpoint name here
-CONFIG_APP_LWM2M_CLIENT="t91-jak"
+CONFIG_APP_LWM2M_CLIENT="nrf9160dk-p"
 
 # I2C
 CONFIG_I2C=y
